[package]
name = "shufflebag"
version = "0.1.0"
edition = "2021"
description = "A shuffle bag implementation on rust."
repository = "https://github.com/ethereal-sheep/shufflebag"
license = "MIT OR Apache-2.0"
keywords = ["rng", "random", "gamedev"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
